Added:color change.

--- a/Assets/Admin/Css/wdrcs-style.scss
+++ b/Assets/Admin/Css/wdrcs-style.scss
@@ -18,7 +18,7 @@
     display: flex;
     justify-content: center;
     cursor: pointer;
-    background-color: #4747EB;
+    background-color: #0f172a;
     padding: 10px 16px;
     color: #FFF;
     border-radius: 6px;
