--- a/Assets/Admin/Css/wdrcs-style.css
+++ b/Assets/Admin/Css/wdrcs-style.css
@@ -1,1 +1,36 @@
-#wdr-compatibility-main{font-family:Helvetica,sans-serif,Arial,sans-serif;margin-right:15px;background-color:#f8f8fc;padding:2rem;display:flex;flex-direction:column;gap:1rem}#wdr-compatibility-main .wdrc-body{min-height:60vh}#wdr-compatibility-main .wdrc-fields-section{display:flex;flex-direction:column;gap:1rem}#wdr-compatibility-main .wdrc-fields-save-section button{display:flex;justify-content:center;cursor:pointer;background-color:#0f172a;padding:10px 16px;color:#fff;border-radius:6px}/*# sourceMappingURL=wdrcs-style.css.map */
+#wdr-compatibility-main {
+  font-family: Helvetica, sans-serif, Arial, sans-serif;
+  margin-right: 15px;
+  background-color: rgb(248, 248, 252);
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+#wdr-compatibility-main .wdrc-body {
+  min-height: 60vh;
+}
+#wdr-compatibility-main .wdrc-fields-section {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+#wdr-compatibility-main .wdrc-fields-save-section button {
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+  background-color: #0f172a;
+  padding: 10px 16px;
+  color: #FFF;
+  border-radius: 6px;
+}
+#wdr-compatibility-main .wdrc-fields-save-section button:disabled {
+  opacity: 0.5;
+  pointer-events: none;
+}
+
+.alertify-notifier .ajs-message.ajs-success {
+  color: #fff;
+}
+
+/*# sourceMappingURL=wdrcs-style.css.map */
